--- a/themes/src/main/resources-community/theme/base/login/messages/messages_nl.properties
+++ b/themes/src/main/resources-community/theme/base/login/messages/messages_nl.properties
@@ -1,8 +1,38 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@vacuas 
+vacuas
+/
+keycloak
+Public
+forked from keycloak/keycloak
+Code
+Pull requests
+Actions
+Projects
+Security
+Insights
+Settings
+keycloak/themes/src/main/resources-community/theme/base/login/messages/messages_nl.properties
+@vacuas
+vacuas Update messages_nl.properties
+Latest commit 3a49da5 27 minutes ago
+ History
+ 14 contributors
+@jevanlingen@tkyjovsk@mposolda@k-tamura@iankko@harture@mihxil@fperot74@eedzjee@drichtarik@dteleguin@fratt-elca
+309 lines (272 sloc)  14.6 KB
+
 # encoding: utf-8
 doLogIn=Inloggen
 doRegister=Registreer
 doCancel=Annuleer
 doSubmit=Verzenden
+doBack=Terug
 doYes=Ja
 doNo=Nee
 doContinue=Doorgaan
@@ -12,11 +42,17 @@ doDecline=Afwijzen
 doForgotPassword=Wachtwoord vergeten?
 doClickHere=Klik hier
 doImpersonate=Identiteit overnemen
+doTryAgain=Probeer opnieuw
+doTryAnotherWay=Probeer op een ander manier
+doConfirmDelete=Bevestig verwijderen
+errorDeletingAccount=Onverwachte fout bij het verwijderen van account
+deletingAccountForbidden=U heeft onvoldoende rechten om dit account te verwijderen, neem contact op met beheer.
 kerberosNotConfigured=Kerberos is niet geconfigureerd
 kerberosNotConfiguredTitle=Kerberos is niet geconfigureerd
 bypassKerberosDetail=U bent niet ingelogd via Kerberos of uw browser kan niet met Kerberos inloggen. Klik op 'doorgaan' om via een andere manier in te loggen
 kerberosNotSetUp=Kerberos is onjuist geconfigureerd. U kunt niet inloggen.
 registerTitle=Registreer
+loginAccountTitle=Inloggen met uw account
 loginTitle=Log in met {0}
 loginTitleHtml={0}
 impersonateTitle={0} Identiteit overnemen
@@ -292,3 +328,11 @@ console-verify-email=U bent verplicht om uw e-mailadres te verifiëren. Een e-ma
 console-email-code=E-mail Code:
 console-accept-terms=Accepteert u de voorwaarden? [y/n]:
 console-accept=y
+
+# Identity provider
+identity-provider-redirector=Gebruik een andere Identity Provider
+identity-provider-login-label=Of login met
+idp-email-verification-display-name=E-mail Verificatie
+idp-email-verification-help-text=Bevestig uw account per e-mail.
+idp-username-password-form-display-name=Gebruikersnaam en wachtwoord
+idp-username-password-form-help-text=Bevestig uw account door in te loggen.
